syntax = "proto3";
package Protocol;

message TestPacket {
    uint32 PlayerId = 1;
    uint32 type = 2;
    float x = 3;
    float y = 4;
    float z = 5;
};