syntax = "proto3";
package Protocol;

message Character {
    uint32 playerid = 1;
    uint32 charactertype = 2;
    uint32 packet_type = 3;
    float x = 4;
    float y = 5;
    float z = 6;
    float pitch = 7;
    float yaw = 8;
    float roll = 9;
    float hp = 10;
    bool isingame = 11;
};

message Zombie {
    uint32 zombieid = 1;
    uint32 zombietype = 2;
    uint32 packet_type = 3;
    float x = 4;
    float y = 5;
    float z = 6;
    float pitch = 7;
    float yaw = 8;
    float roll = 9;
};

message Zombie_attack{
    uint32 zombieid = 1;
    uint32 packet_type = 3;
}

message Zombie_hp{
    uint32 zombieid = 1;
    float hp = 2;
    uint32 packet_type = 3;
}

message ZombieDataList {
    repeated Zombie zombies = 1;
    uint32 packet_type = 3;
}

message Vector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message ZombiePath {
    uint32 zombieid = 1;
    Vector3 path = 2;
    uint32 packet_type = 3;
    Vector3 location = 4;
}

message PatrolPath {
    uint32 zombieid = 1;
    Vector3 path = 2;
    uint32 packet_type = 3;
    Vector3 location = 4;
}

message Detected {
    uint32 zombieid = 1;
    uint32 playerid = 2;
    uint32 packet_type = 3;
    bool player_insight = 4;
}

message Time {
    float timer = 1;
    uint32 packet_type = 3;
}

message Character_Attack {
    uint32 playerid = 1;
    bool attack = 2;
    uint32 packet_type = 3;
}

message Equip_Item{
    uint32 playerid = 1;
    string itemname = 2;
    uint32 packet_type = 3;
    uint32 itemtype = 4;
}

message run{
    uint32 playerid = 1;
    bool b_run = 2;
    uint32 packet_type = 3;
}

message jump{
    uint32 playerid = 1;
    uint32 packet_type = 3;
}

message ping{
    uint32 playerid = 1;
    uint32 packet_type=3;
}